syntax = "proto3";
option go_package="./;grpc_protobuf";
package grpc_protobuf;

service TestService {
    rpc SayHello(HelloReq) returns (HelloResp) {};
}

message HelloReq {
    string input = 1;
}
message HelloResp {
    string output = 1;
}